[package]
name = "image-combiner"
version = "0.1.10"
edition = "2018"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
keywords =["image"]
description = "a simple image combiner"
repository = "https://github.com/sinyo-matu/image-combiner"
license = "MIT"

[dependencies]
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread","sync"] }
image = "0.23.14"
log = "0.4.14"
imageproc = "0.22.0"
rusttype = "0.9.2"

[dev-dependencies]
dotenv = "0.15.0"
simplelog = "0.10.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
